@@ -10,6 +10,8 @@
 -update mouse set_cursor to use cursor data.
 -update transform rotozoom to optimize.
 -update surface area blit to optimize.
+-update display update method to optimize.
+-add util timer for profiling.
 
 0.27    2015-04-12
 -update font to enhance fonts access.
